--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,27 @@
+.HC_{
+    text-align: center;
+}
+
+.HC_component{
+    margin: 10px;
+}
+
+.header_{
+    text-align: center;
+}
+
+.home{
+    border: 1px solid #dfe1e5;
+    padding: 20px;
+    text-align: center;
+    
+}
+
+.home_content{
+    margin: 10px;
+    font-size: larger;
+}
+
 .box{
     width: 200px;
     height: 200px;
@@ -181,20 +205,26 @@ body {
     text-decoration: underline;
   }
 
+#wrap{
+    min-height: 100%;
+    position: relative;
+}
+
 .insta_main{
     display: flex;
     justify-content: center;
 }
 
-.insta_mainbox{
-    border: 1px solid #dfe1e5 ;
+.insta_box{
+    border: 1px solid #dfe1e5;
     width: 350px;
     height: 402px;
     align-items: center;
     text-align: center;
     margin: 0, 0, 10px;
     padding: 25px;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 .input_box{
@@ -258,3 +288,94 @@ hr:after{
     color: #9aa0a6;
     font-family: inherit;
 }
+
+.link_component{
+    text-decoration: none;
+    color:rgba(0, 0, 0, .54);
+    
+}
+
+.link_component:hover{
+    color: #202124;
+}
+
+.facebook_login{
+    text-decoration: none;
+    color: #385185;
+    font-weight: bold;
+}
+
+.lost_pw{
+    margin-top: 10px;
+    font-size: small;
+}
+
+.facebook_lost_pw{
+    text-decoration: none;
+    color: #385185;
+    
+}
+
+.insta_join_box{
+    margin: 20px 0 10px;
+    border: 1px solid #dfe1e5 ;
+    align-items: center;
+    border-radius: 1px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    font-size: 100%;
+    padding: 20px;
+    position: relative;
+    font-family: inherit;
+    
+}
+
+.join_link{
+    text-decoration: none;
+    color: #0095f6;
+    font-weight: bold;
+}
+
+.join_link:hover{
+    color: #2980b9;
+}
+
+.app_box {
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+}
+
+.download_img{
+    height: 40px;
+    margin: 10px;
+
+}
+
+.insta_footer{
+    position: relative;
+    bottom:0px;
+    font-size: small;
+    font-family: inherit;
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.footer_content_box{
+    margin: 10px;
+    padding: 10px;
+}
+
+.footer_content{
+    margin: 5px 5px 5px;
+    text-decoration: none;
+    color: #737373;
+}
+
+select{
+    border: none;
+    color: #737373;
+}
+
