--- a/src/style.css
+++ b/src/style.css
@@ -379,3 +379,90 @@ select{
     color: #737373;
 }
 
+.positioning{
+    border: 1px solid red;
+    width: 700px;
+    height: auto;
+    padding: 10px;
+    margin-top: 10px;
+    
+}
+
+.po_box{
+    width: 200px;
+    height: 100px;
+    color: white;
+    text-align: center;
+
+}
+
+.po_box_seperate{
+    border: 1px solid black;
+    margin-top: 20px;
+    padding: 10px;
+    width: 650px;
+    height: 500px;
+}
+
+.red{
+    background-color: red;
+}
+
+.blue{
+    background-color: blue;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.black{
+    background-color: black;
+}
+
+
+
+.locate_relative{
+    position: relative;
+    left: 400px;
+}
+
+.locate_absolute{
+    position: absolute;
+    left: 400px;
+    top:200px
+}
+
+.locate_fixed{
+    position: fixed;
+    left:500px;
+    top:100px;
+}
+
+.locate_sticky{
+    position: sticky;
+    left: 100px;
+    top: 100px;
+} 
+
+.locate_display_flex_center{
+    display: flex;
+    justify-content: center;
+}
+
+.locate_display_flex_space-between{
+    display: flex;
+    justify-content: space-between;
+}
+
+.locate_display_flex_align_items{
+    display: flex;
+    align-items: center;
+    height: 50vh;
+}
+
+.locate_display_flex_direction_column_space-between{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
